# jimmbot_audiofx

./: CMakeLists.txt  README.md  package.xml
config/: audiofx.yaml
include/jimmbot_audiofx/: audiofx.hpp  audiofx_loader.hpp
launch/: audiofx.launch
src/: audiofx.cpp  audiofx_loader.cpp
